test/typechecker.d/valid/match4.surc
match4(dox: Integer): Integer = match dox: Integer
	3 -> 3
	n -> 4: Integer
