test/typechecker.d/invalid/match4.surc
match4(dox: Integer): Integer = match dox: Integer
	3 -> "str"
	n -> 4
